--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "homepage": "https://imc89.github.io/BBVA-Game",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -40,6 +38,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.2.0"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "gh-pages": "^6.2.0",
+    "jest": "^27.5.1"
   }
 }
