--- a/package.json
+++ b/package.json
@@ -42,5 +42,10 @@
     "@testing-library/react": "^16.0.1",
     "gh-pages": "^6.2.0",
     "jest": "^27.5.1"
+  },
+  "jest": {
+    "watchPathIgnorePatterns": [
+      ".*.index.js"
+    ]
   }
 }
